2011.06.12 - version 2.5.1
	* new: added sb_before/after_{sidebar}_aside to appear outside of opening/closing div for given sidebar
	* changed: moved sb_before/after_{sidebar}_widgets to appear inside of opening/closing div for for given sidebar
	* fixed: removed extra double quote output at end of sb_post_image_url()
	* fixed: hooked style.css to wp_enqueue_scripts, instead of template_redirect

2011.06.12 - version 2.5
	* new: added new Sidebar manager, create custom sidebars via the Appearance menu
	* new: theme support for custom page layouts
	* new: layout selector added for all post types and taxonomies
	* new: a 'layout' option type for the Options API
	* new: filter sb_layout_image_uri to set custom layout images
	* new: filter get_post_layout_default to override default layout
	* new: filter get_theme_layout to alter body class output for layouts
	* new: several more hooks before and after each individual widget area. maintained legacy hooks, too.
	* new: sb_post_image_url() to output just the image URI for cropped images
	* new: conditional sb_verify_post_type($type)
	* new: shortcode [sidebar id="the-sidebar-id"] for adding sidebars virtually anywhere
	* new: SB_Sidebar class, can be extended by child theme to redefine StartBox sidebar defaults
	* changed: added several more theme options for controlling post thumbnails
	* changed: adjusted footer text sanitization to allow only practical html by default
	* changed: moved all files in /includes/styles/defaults/ to /includes/styles/
	* changed: deleted /includes/styles/layouts/
	* changed: edited SB Featured widget to include all public post types as selectable content types
	* changed: updated "Display A Category" page template (page_category.php) to optionally display CPT's and parse more variables set via custom fields
	* changed: updated sb_post_image to use TimThumb's new align arguments (NOTE: this breaks the old arguments)
	* changed: updated facebook shortcode to include new "send" button